fixed wrapping on slack link when on a smaller screen

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -17,6 +17,7 @@
 
 .slack-link-text {
   text-decoration: none;
+  text-align: center;
   font-size: 2.25rem;
   color: #22223b;
   color: #F88E00;
