--- a/client/src/styles/EventStyles.css
+++ b/client/src/styles/EventStyles.css
@@ -5,6 +5,7 @@
 
 .event-date-container {
   height: 30vh;
+  min-height: 200px;
 }
 
 .top-date {
